--- a/Otchet.tex
+++ b/Otchet.tex
@@ -2,6 +2,10 @@
 \usepackage[utf8x]{inputenc}
 \usepackage[russian]{babel}
 \usepackage{amsmath}
+\usepackage[a4paper, total={6in, 8in}]{geometry}
+\usepackage{graphicx}
+\graphicspath{{pictures/}}
+\DeclareGraphicsExtensions{.pdf,.png,.jpg}
 \author{Носков Роман, Пасютин Александр, Панчишин Даниил}
 \title{Инструменты для оформления научных статей и презентаций (верстка текстового документа в Latex, оформление элементов текстового документа в \LaTeX, презентации в \LaTeX, работа с видео в \LaTeX-презентациях).}
 \begin{document}
@@ -179,11 +183,50 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 	
 	Создали в PowerPoint шаблон презентации, словарь команд \LaTeX для изменения шрифтов, заготовки отчета и презентации в \LaTeX
 	
+	\includegraphics{1}
+	
+	
+	\includegraphics{2}
+	
+	
+	\includegraphics{3}
+	
+	
+	\includegraphics{4}
+	
+	
+	\includegraphics{5}
+	
+	
+	\includegraphics{6}
+	
+	
+	\includegraphics{7}
+	
+	
+	\includegraphics{8}
+	
+	
+	
 	\subsection*{15.04-13.05}
 	
 	Частично изучили класс для создания презентаций Beamer, работу с overlay’ами, рисунками, ссылками, кнопками, видео и листингом кода. Также были изучены ввод матриц, графиков и псевдорисунков. В области верстки текста было изучено создание таблиц.
 	
 	Были обновлены презентация и отчет. В презентацию добавлены примеры кода формул, графиков, псевдорисунков, их итогового отображения и кода отчета, также с итоговым отображением.
+	
+	\includegraphics{9}
+	
+	\includegraphics{10}
+	
+	\includegraphics{11}
+	
+	\includegraphics{12}
+	
+	\includegraphics{13}
+	
+	\includegraphics{14}
+	
+	\includegraphics{15}
 	
 	\subsection*{13.05-27.05}
 	
