--- a/Otchet.tex
+++ b/Otchet.tex
@@ -183,19 +183,19 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 	
 	Создали в PowerPoint шаблон презентации, словарь команд \LaTeX для изменения шрифтов, заготовки отчета и презентации в \LaTeX
 	
-	\includegraphics{1}
+	\includegraphics[width=\linewidth]{1}
 	
 	
-	\includegraphics{2}
+	\includegraphics[width=\linewidth]{2}
 	
 	
-	\includegraphics{3}
+	\includegraphics[width=\linewidth]{3}
 	
 	
-	\includegraphics{4}
+	\includegraphics[width=\linewidth]{4}
 	
 	
-	\includegraphics{5}
+	\includegraphics[width=\linewidth]{5}
 	
 	
 	\includegraphics{6}
@@ -216,17 +216,17 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 	
 	\includegraphics{9}
 	
-	\includegraphics{10}
+	\includegraphics[width=\linewidth]{10}
 	
-	\includegraphics{11}
+	\includegraphics[width=\linewidth]{11}
 	
-	\includegraphics{12}
+	\includegraphics[width=\linewidth]{12}
 	
-	\includegraphics{13}
+	\includegraphics[width=\linewidth]{13}
 	
-	\includegraphics{14}
+	\includegraphics[width=\linewidth]{14}
 	
-	\includegraphics{15}
+	\includegraphics[width=\linewidth]{15}
 	
 	\subsection*{13.05-27.05}
 	
