--- a/Otchet.tex
+++ b/Otchet.tex
@@ -4,11 +4,13 @@
 \usepackage{amsmath}
 \usepackage[a4paper, total={6in, 8in}]{geometry}
 \usepackage{graphicx}
+\usepackage{setspace}
 \graphicspath{{pictures/}}
 \DeclareGraphicsExtensions{.pdf,.png,.jpg}
 \author{Носков Роман, Пасютин Александр, Панчишин Даниил}
 \title{Инструменты для оформления научных статей и презентаций (верстка текстового документа в Latex, оформление элементов текстового документа в \LaTeX, презентации в \LaTeX, работа с видео в \LaTeX-презентациях).}
 \begin{document}
+	\begin{spacing}{1.6}
 	\begin{center}
 		\scriptsize{МИНИСТЕРСТВО НАУКИ И ВЫСШЕГО ОБРАЗОВАНИЯ РОССИЙСКОЙ ФЕДЕРАЦИИ
 		
@@ -42,6 +44,7 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 
 $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\text{(Оценка)}}{\underline{\hspace{0.1\textwidth}}}$ 
 \end{flushright}
+\end{spacing}
 \newpage
 \section*{Оглавление}
 \LARGE{
@@ -125,7 +128,7 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 Пасютин А.С. - Работа в LaTeX’е с инструментами для работы с презентациями, фотографиями.
 
 \subsection*{План-график работы}
-\begin{tabular}{|l|p{8,5cm}|}
+\begin{tabular}{|l|p{12cm}|}
 	\hline
 	18.02 & Распределение ролей, создание удаленного репозитория, составление календарного плана \\
 	\hline
@@ -238,6 +241,6 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 		\item Львовский С. М. Набор и вёрстка в системе LaTeX. — М.: МЦНМО,
 		 2006. — 448 с.
 		 \item Котельников И. А., Чеботаев П. З. LaTeX по-русски. — СПб. : «Корона-Век», 2011. — 496 с.
-		 \item Курс «Документы и презентации в LaTeX (Introduction to LaTeX)» на сайте coursera.org - https://www.coursera.org/learn/latex/home/welcome
+		 \item Курс «Документы и презентации в LaTeX (Introduction to LaTeX)» - https://www.coursera.org/learn/latex/home/welcome
 	\end{itemize}
 \end{document}
