--- a/Otchet.tex
+++ b/Otchet.tex
@@ -11,6 +11,7 @@
 \title{Инструменты для оформления научных статей и презентаций (верстка текстового документа в Latex, оформление элементов текстового документа в \LaTeX, презентации в \LaTeX, работа с видео в \LaTeX-презентациях).}
 \begin{document}
 	\begin{spacing}{1.6}
+		\Large{
 	\begin{center}
 		\scriptsize{МИНИСТЕРСТВО НАУКИ И ВЫСШЕГО ОБРАЗОВАНИЯ РОССИЙСКОЙ ФЕДЕРАЦИИ
 		
@@ -44,32 +45,10 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 
 $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\text{(Оценка)}}{\underline{\hspace{0.1\textwidth}}}$ 
 \end{flushright}
+}
 \end{spacing}
 \newpage
-\section*{Оглавление}
-\LARGE{
-1. Описание проекта \hspace{79mm} 3
-\vspace{\baselineskip}
-
-\noindent2. Состав группы участников проекта \hspace{35mm} 3
-\vspace{\baselineskip}
-
-Состав группы \hspace{87mm} 3
-\vspace{\baselineskip}
-
-Общие цели и задачи \hspace{72mm} 4
-\vspace{\baselineskip}
-
-Распределение по ролям \hspace{63mm} 4
-\vspace{\baselineskip}
-
-План-график работы \hspace{71mm} 5
-\vspace{\baselineskip}
-
-\noindent3. Ход работы \hspace{96mm} 8
-\vspace{\baselineskip}
-
-\noindent4. Литература} \hspace{93mm} 20
+\tableofcontents
 \newpage
 \section{Описание проекта}
 	\section*{Актуальность, теоретическая и практическая значимость:}
@@ -94,6 +73,7 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 	
 \section{Состав группы участников проекта}
 \subsection*{Состав группы}
+\addcontentsline{toc}{section}{Состав группы}
 \begin{tabular}{| l | l | l |p{5cm}|}
 \hline
 № & ФИО & Логин на github.com \\
@@ -106,11 +86,11 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 \hline
 \end{tabular}
 \subsection*{Общие цель и задачи}
-
+\addcontentsline{toc}{section}{Общие цель и задачи}
 \noindent\textbf{Цель:} научиться делать документы с высококачественной версткой текста, формул и других объектов
 
 \subsection*{Задачи:}
-
+\addcontentsline{toc}{section}{Задачи}
 \begin{itemize}
 	\item Изучение инструментов и макропакетов ТеХ'а
 	
@@ -119,6 +99,7 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 	\item Создание отчета по проекту в системе LaTeX
 \end{itemize}
 \subsection*{Распредение по ролям}
+\addcontentsline{toc}{section}{Распределение по ролям}
 Панчишин Д.И. - Тимлид, создание тех задания, работа в LaTeX’е с мат. Формулами, псевдорисунки и графиками.
 
 \vspace{\baselineskip}
@@ -128,6 +109,7 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 Пасютин А.С. - Работа в LaTeX’е с инструментами для работы с презентациями, фотографиями.
 
 \subsection*{План-график работы}
+\addcontentsline{toc}{section}{План-график работы}
 \begin{tabular}{|l|p{12cm}|}
 	\hline
 	18.02 & Распределение ролей, создание удаленного репозитория, составление календарного плана \\
@@ -150,16 +132,18 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 \end{tabular}
 
 \subsection*{Что такое \TeX и \LaTeX}
+\addcontentsline{toc}{section}{Что такое \TeX и \LaTeX}
 \TeX — издательская система, созданная американским математиком и программистом Дональдом Кнутом (Donald E. Knuth). \TeX был разработан преследуя две основные цели: - позволить всем создавать качественные публикации с разумными для этого усилиями. \TeX знаменит своей чрезвычайной стабильностью, работой на различных операционных системах и практически полным отсутствием ошибок. Одна из главных причин по которой TeX выбирают для оформления научных работ заключается в том, что с его помощью можно достаточно легко вводить сложные формулы.
 
 \vspace{\baselineskip}
 \LaTeX — наиболее популярный набор макрорасширений (или макропакет) системы компьютерной вёрстки TeX, который облегчает набор сложных документов. Первая версия \LaTeX была написана в 1984 году Лесли Лампортом (Leslie Lamport) и с тех пор стала доминирующим способом подготовки \TeX публикаций. Важно заметить, что ни один из макропакетов для \TeX’а не может расширить \TeX’овских возможностей (всё, что можно сделать в LaTeX’е, можно сделать и в \TeX’е), но, благодаря различным упрощениям, использование макропакетов зачастую позволяет избежать весьма изощрённого программирования. Пакет позволяет автоматизировать многие задачи набора текста и подготовки статей, включая набор текста на нескольких языках, нумерацию разделов и формул, перекрёстные ссылки, размещение иллюстраций и таблиц на странице, ведение библиографии и др. Кроме базового набора существует множество пакетов расширения \LaTeX.
 
 \subsection*{Используемые средства}
-
+\addcontentsline{toc}{section}{Используемые средства}
 Для того чтобы писать \LaTeX на ПК под управлением Windows 10 нам понадобится загрузить и установить TexStudio(редактор для создания \TeX документов), а также MikTex(дистрибутив \TeX для Windows, необходимый для компиляции .tex файлов в .pdf).
 
 \subsection*{Что представляет из себя \LaTeX документ}
+\addcontentsline{toc}{section}{Что представляет из себя \LaTeX документ}
 Документ \LaTeX — это текстовый файл, содержащий специальные команды языка разметки. Сам документ делится на преамбулу и тело. Преамбула содержит информацию про класс документа, использованные пакеты макросов, определения макросов, автора, дату создания документа и другую информацию. Тело документа содержит собственно текст документа и команды разметки
 	\section*{Цели и задачи:}
 	
@@ -170,12 +154,12 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 	\noindent\emph{Задачи:} изучение инструментов и макропакетов ТеХ'а, получение навыков верстки текста в ЛаТеХ'е, создание отчета по проекту в системе ЛаТеХ.
 	
 	
-	\section*{Конечный результат:}
+	\section{Конечный результат:}
 	Презентация и отчет о \LaTeX, созданные в \LaTeX.
 	
-	\section*{Ход работы}
+	\section{Ход работы}
 	\subsection*{3.03 – 18.03:}
-	
+	\addcontentsline{toc}{section}{3.03 – 18.03}
 	Изучили особенности форматирования текста в системе LaTeX (русификация, шрифты, стили, разделы, интервалы, переносы)
 	
 	Изучили набор математических формул (строчные и выключные формулы, дроби, скобки, стандартные функции, символы, диакратические знаки и буквы других алфавитов)
@@ -183,7 +167,7 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 	Создание презентаций (знакомство с пакетом Beamer, темы оформления, создание титульного слайда, оглавление презентации, поочередное появление объектов, выделение информации при помощи блоков и т.д.)
 	
 	\subsection*{18.03-15.04:}
-	
+	\addcontentsline{toc}{section}{18.03-15.04}
 	Создали в PowerPoint шаблон презентации, словарь команд \LaTeX для изменения шрифтов, заготовки отчета и презентации в \LaTeX
 	
 	\includegraphics[width=\linewidth]{1}
@@ -211,8 +195,8 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 	
 	
 	
-	\subsection*{15.04-13.05}
-	
+	\subsection*{13.05-27.05}
+	\addcontentsline{toc}{section}{13.05-27.05}
 	Частично изучили класс для создания презентаций Beamer, работу с overlay’ами, рисунками, ссылками, кнопками, видео и листингом кода. Также были изучены ввод матриц, графиков и псевдорисунков. В области верстки текста было изучено создание таблиц.
 	
 	Были обновлены презентация и отчет. В презентацию добавлены примеры кода формул, графиков, псевдорисунков, их итогового отображения и кода отчета, также с итоговым отображением.
@@ -232,7 +216,7 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 	\includegraphics[width=\linewidth]{15}
 	
 	\subsection*{13.05-27.05}
-	
+	\addcontentsline{toc}{section}{13.05-27.05}
 	Закончены и оформлены презентация и отчет. 
 	
 	\section{Литература}
@@ -241,6 +225,8 @@ $\underset{\text{(ФИО)}}{\underline{\hspace{0.3\textwidth}}}$ $\underset{\tex
 		\item Львовский С. М. Набор и вёрстка в системе LaTeX. — М.: МЦНМО,
 		 2006. — 448 с.
 		 \item Котельников И. А., Чеботаев П. З. LaTeX по-русски. — СПб. : «Корона-Век», 2011. — 496 с.
-		 \item Курс «Документы и презентации в LaTeX (Introduction to LaTeX)» - https://www.coursera.org/learn/latex/home/welcome
+		 \item Курс «Документы и презентации в LaTeX (Introduction to LaTeX)» -
+		 
+		  https://www.coursera.org/learn/latex/home/welcome
 	\end{itemize}
 \end{document}
