--- a/document (1).tex
+++ b/document (1).tex
@@ -120,4 +120,25 @@ II.3.65 && 1 && 4 && 6 && 4 && 1\\
 	\end{axis}
 \end{tikzpicture}
 
+\begin{tikzpicture}
+	\begin{axis}[
+		title = Логарифм Х по основанию 2,
+		xlabel = {$x$},
+		ylabel = {$y$},
+		minor tick num = 2
+		]
+		\addplot {log2(x)};
+	\end{axis}
+\end{tikzpicture}
+
+\begin{tikzpicture}
+	\begin{axis}[
+		title = 3D model,
+		view={110}{10}, 
+		colormap/greenyellow,
+		]
+		\addplot3[surf] {-sin(x^2 + y^2)};
+	\end{axis}
+\end{tikzpicture}
+
 \end{document}
