--- a/document (1).tex
+++ b/document (1).tex
@@ -141,4 +141,14 @@ II.3.65 && 1 && 4 && 6 && 4 && 1\\
 	\end{axis}
 \end{tikzpicture}
 
+\begin{tikzpicture}
+	\begin{axis}[
+		title = 3D model,
+		view={110}{10}, 
+		colormap/greenyellow,
+		]
+		\addplot3[surf] {-sin(x^4 + y^4)};
+	\end{axis}
+\end{tikzpicture}
+
 \end{document}
