--- a/proekt/proekt.tex
+++ b/proekt/proekt.tex
@@ -149,7 +149,7 @@
 	\transblindsvertical<1>[duration=1]
 	\frametitle{\insertsection}
 	\begin{enumerate}
-		\item[\textbullet]<1-> \textbf{Панчишин Даниил} - Тим-лид, создание тех задания, работа в \LaTeX’е с мат. формулами, рисунками и графиками;
+		\item[\textbullet]<1-> \textbf{Панчишин Даниил} - Тимлид, создание тех задания, работа в \LaTeX’е с мат. формулами, рисунками и графиками;
 		\item[\textbullet]<2-> \textbf{Носков Роман} - Работа в \LaTeX’е с инструментами для верстки текста;
 		\item[\textbullet]<3-> \textbf{Пасютин Александр} - Работа в \LaTeX’е с инструментами для работы с презентациями.
 	\end{enumerate}
@@ -611,6 +611,12 @@ a_n=\inf_n\sup_{m\ge n}a_m$
 \begin{frame}
 	\transwipe<1>[duration=1]
 	\frametitle{\insertsection}
+	\includegraphics[scale=0.5]{str}
+\end{frame}
+
+\begin{frame}
+	\transwipe<1>[duration=1]
+	\frametitle{\insertsection}
 	\[\begin{tikzpicture}
 		% Края доски:
 		\draw[very thick] (-5.5,0) -- (5.5,0) -- (5.5,5.5) -- (-5.5,5.5) -- cycle;
@@ -626,12 +632,6 @@ a_n=\inf_n\sup_{m\ge n}a_m$
 		\node at (4,0.7) {\color{red} End of line};
 	\end{tikzpicture}
 	\]
-\end{frame}
-
-\begin{frame}
-	\transwipe<1>[duration=1]
-	\frametitle{\insertsection}
-	\includegraphics[scale=0.6]{str}
 \end{frame}
 
 \section{Графики}
